# Angchi_project

./: .gitignore  README.md  brTest.txt  br_Test_js.txt  degarr.txt  dy_server.py  motor3.txt
ODrive_MJ/ODrive_MJ/: ModeB.py  Testcar_pub_mode.py  Testcar_sub_mode.py  mode_control_meja.py  pub_hall_mode_select.py
arrow/: package.xml  setup.cfg  setup.py
arrow/arrow/: arrow_pub.py  arrow_sub.py
call_srv/: package.xml  setup.cfg  setup.py
call_srv/call_srv/: caller.py
call_srv/launch/: caller.launch.py
cam_yolov8/: package.xml  setup.cfg  setup.py
cam_yolov8/cam_yolov8/: YoLOv8_abc_test.py  arduino_code.txt  pub_cam_yolo.py  sub_cam_yolo.py
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: SerialCommand.msg
custom_interfaces/srv/: PositionService.srv  Protocool.srv  String.srv
detectdis_py/: serial_test.py
detectdis_py/launch/: serial_test.launch.py  sub.launch.py
dynamixel_MJ/: package.xml  setup.cfg  setup.py
dynamixel_MJ/dynamixel_MJ/: Grip_torque_test.py  Grip_torque_test_pub.py  Gripper.py  Gripper_0813.py  Gripper_kokomk4.py  Gripper_test.py  Sub_Trip_Oneport.py  degarr.txt  dynamixel_koko.py  extended_position.py  gripper_testcode.py  port_handler.py  pub_double.py  pub_extend.py  pub_trip.py  read_write.py  reboot.py  rw_sub.py  sub_double.py  sub_extend.py  sub_trip.py  test_id4_sub.py  test_id5_sub.py  test_id6_sub.py  test_pub.py
exercise_pkg/: package.xml  setup.py
exercise_pkg/exercise_pkg/: exercise2.py
exercise_pkg/launch/: exercise2.launch.py
git/: package.xml  setup.cfg  setup.py
gukbang/: package.xml  setup.py
gukbang/launch/: center_autumn_auto.launch.py  center_spring_auto.launch.py  center_spring_drive.launch.py  center_summer_auto.launch.py  center_summer_drive.launch.py  center_winter_auto.launch.py  common_center_joy.launch.py  common_robot_joy.launch.py  robot_autumn_auto.launch.py  robot_autumn_drive.launch.py  robot_spring.launch.py  robot_spring_auto.launch.py  robot_spring_drive.launch.py  robot_summer_auto.launch.py  robot_summer_drive.launch.py  robot_winter_auto.launch.py  robot_winter_drive.launch.py  spring.launch.py  summer.launch.py  winter.launch.py
hello_moveit/: package.xml
hello_moveit/src/: hello_moveit.cpp
image_processing/: package.xml  setup.py
image_processing/image_processing/: align_capture.py  commander.py  depth_capture.py  depth_indicater.py  hand_detector.py  image_catcher.py  image_indicater.py  qos_setting_cap.py  qos_setting_indi.py  test_capture.py  test_indicator.py
indy-ros2/indy_moveit/: CMakeLists.txt  package.xml
interfaces_gripper/: CMakeLists.txt  package.xml
joystick_ctrl/: package.xml  setup.cfg  setup.py
joystick_ctrl/joystick_ctrl/: joy_pub_testmodel.py  joy_sub_testmodel.py  test_joy_echo.py  test_joy_sub.py
joystick_ctrl/launch/: test_model_launch.py
mani/: .setup_assistant  CMakeLists.txt  package.xml
mani/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  obstacle_avoidance_demo.launch  ros2_controllers.yaml  urdfbot.ros2_control.xacro  urdfbot.srdf  urdfbot.urdf.xacro
mani/launch/: demo.launch.py  rsp.launch.py  (+8 more)
mani_depth/: .setup_assistant  CMakeLists.txt  package.xml
mani_description/: .setup_assistant  CMakeLists.txt  package.xml
mani_moveit/: CMakeLists.txt  package.xml
mani_moveit/src/: activegrippertest.cpp  mani_moveit.cpp
mani_project/: package.xml  setup.cfg  setup.py
mani_project/launch/: excute_mani.launch.py  servo_mani.launch.py
mani_servo/: CMakeLists.txt  package.xml
mani_servo/launch/: mani_joy.launch.py
mani_servo/src/: mani_joy.cpp
mani_sim/: package.xml  setup.cfg  setup.py
motorcontrol/: package.xml  setup.py
oDrive_MJ/: package.xml  setup.cfg  setup.py
opencv_test/: aruco_marker.py  cam_test.py  mediapipe_test.py  yolov8_ASL.py  yolov8_person.py  yolov8_test.py
parabellum_gukbang/: package.xml  setup.cfg  setup.py
piProj_jw/: package.xml  setup.cfg  setup.py
pi_proj_js/: package.xml  setup.cfg  setup.py
pi_proj_kh/: package.xml  setup.cfg  setup.py
pi_proj_mj/: package.xml  setup.cfg  setup.py
pi_proj_ym/: package.xml  setup.cfg  setup.py
pubsub_test_py/: package.xml  setup.cfg  setup.py
robot_test/: package.xml  setup.py
ros2_yolov8/: package.xml  setup.py
rs485_mani/: package.xml  setup.cfg  setup.py
ser_comm/: package.xml  setup.cfg  setup.py
test_pkg_1/: package.xml  setup.py
track_test_pkg/: package.xml  setup.cfg  setup.py
urdf_test/: .setup_assistant  CMakeLists.txt  package.xml
urdfbot_description/: degarr.txt  package.xml
yolo_test/: coco128.txt  test2.py
(+277 files in other folders)
